<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/main_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="80sp" />
    
   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
    
	    <LinearLayout
	        android:id="@+id/main_ll_add"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="#70ffffff"
		    android:orientation="horizontal"
	    	android:layout_marginBottom="40dp"
		    android:padding="20dp" >
		    
	        <TextView
		        android:id="@+id/main_tv_plus"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/icon_plus"
		        android:layout_gravity="center"
		        android:textSize="30sp" />
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=" Add Route"
		        android:layout_gravity="center"
		        android:typeface="sans"
		        android:textSize="40sp" />
	        
	    </LinearLayout>
	    
	 <LinearLayout
	        android:id="@+id/main_ll_view"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="#70ffffff"
		    android:orientation="horizontal"
		    android:padding="20dp" >
		    
	        <TextView
		        android:id="@+id/main_tv_bars"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/icon_bars"
		        android:layout_gravity="center"
		        android:textSize="30sp" />
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=" Sent Routes"
		        android:layout_gravity="center"
		        android:typeface="sans"
		        android:textSize="40sp" />
	        
	    </LinearLayout>
	    
	</LinearLayout>

</LinearLayout>
