<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:map="http://schemas.android.com/apk/res-auto"
	android:id="@+id/view_route_sv_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRoute" >
    
	<LinearLayout 
	    	android:id="@+id/view_route_ll_main"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="20dp"
		    android:paddingRight="20dp"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:orientation="vertical" >
	    
	    	<LinearLayout
	    	    android:id="@+id/view_route_ll_name"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:gravity="center"
		        android:orientation="horizontal" >
	
			    <TextView
			        android:id="@+id/view_route_tv_name"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:gravity="center"
			        android:textSize="40sp"
			        android:paddingTop="5dp" />
		
			    <TextView
			        android:id="@+id/view_route_tv_grade"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="5dp"
			        android:background="@drawable/grade_bg"
			        android:textColor="#ffffff"
			        android:gravity="center"
			        android:textSize="20sp" />
			    
			</LinearLayout>
	    
		   	<RelativeLayout
		   	    android:id="@+id/view_route_rl_photo"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:layout_marginBottom="20dp"
		        android:background="@drawable/photo_bg"
		        android:gravity="center" >
		    
			    <com.sendit.SquareImage
			        android:id="@+id/view_route_iv_photo"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
	        		android:background="#cccccc"
			        android:scaleType="centerCrop" />
			    
			</RelativeLayout>
		
		   	<LinearLayout 
		        android:id="@+id/view_route_ll_rating"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center"
		        android:layout_marginBottom="20dp" >
			    
			    <TextView
			        android:id="@+id/view_route_tv_star_1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="40sp"
			        android:padding="5dp"
			        android:text="@string/icon_star_o" />
			    
			    <TextView
			        android:id="@+id/view_route_tv_star_2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="40sp"
			        android:padding="5dp"
			        android:text="@string/icon_star_o" />
			    
			    <TextView
			        android:id="@+id/view_route_tv_star_3"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="40sp"
			        android:padding="5dp"
			        android:text="@string/icon_star_o" />
			    	    
			    <TextView
			        android:id="@+id/view_route_tv_star_4"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="40sp"
			        android:padding="5dp"
			        android:text="@string/icon_star_o" />
			    	    
			    <TextView
			        android:id="@+id/view_route_tv_star_5"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="40sp"
			        android:padding="5dp"
			        android:text="@string/icon_star_o" />
			    
			</LinearLayout>
			
			<RelativeLayout
			    	android:id="@+id/view_route_rl_location_container"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#e5e5e5"
			        android:padding="15dp"
			        android:layout_marginBottom="20dp">
			    
			    <TextView
			        android:id="@+id/view_route_tv_location_icon"
			        android:layout_width="30dp"
			        android:layout_height="wrap_content"
			        android:textSize="40sp"
			        android:text="@string/icon_map_marker" />
			    
			    <LinearLayout
			        android:id="@+id/view_route_ll_location_details"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_toRightOf="@id/view_route_tv_location_icon"
			        android:layout_marginTop="5dp"
				    android:orientation="vertical" >
			    
				    <TextView
				        android:id="@+id/view_route_tv_wall"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:textSize="20sp" />
				    
				    <TextView
				        android:id="@+id/view_route_tv_crag"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:textSize="20sp" />
				    
				    <TextView
				        android:id="@+id/view_route_tv_location"
				        android:layout_width="wrap_content"
				        android:layout_height="0dp"
				        android:textSize="20sp" />
			    
			    </LinearLayout>
	
			   	<RelativeLayout 
			   	    android:id="@+id/view_route_rl_map_container"
				    android:layout_width="match_parent"
				    android:layout_height="300dp"
				    android:layout_below="@id/view_route_ll_location_details"
				    android:orientation="horizontal"
				    android:layout_marginTop="10dp" >
				
					<fragment
					  	android:id="@+id/view_route_mf_map"
					  	android:name="com.google.android.gms.maps.MapFragment"
					  	android:layout_width="match_parent"
					  	android:layout_height="match_parent" />
				
					<ImageView
					  	android:id="@+id/view_route_iv_map"
					  	android:layout_width="match_parent"
					  	android:layout_height="match_parent" />
				
				</RelativeLayout>
				
		   		<TextView
			        android:id="@+id/view_route_tv_open_map"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
				    android:layout_below="@id/view_route_rl_map_container"
				    android:paddingTop="10dp"
			        android:textSize="12sp"
			        android:text="Open location in Google Maps" />
				
			</RelativeLayout>

			<LinearLayout
			    android:id="@+id/view_route_ll_date"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp">
				    
			    <TextView
			        android:id="@+id/view_route_tv_date_icon"
			        android:layout_width="35dp"
			        android:layout_height="wrap_content"
			        android:textSize="30sp"
			        android:text="@string/icon_calendar" />
			    
			    <TextView
			        android:id="@+id/view_route_tv_date"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="-5dp"
			        android:textSize="20sp" />
		    
		    </LinearLayout>

			<LinearLayout
			    android:id="@+id/view_route_ll_send_type"
		        android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="20dp">
				    
			    <TextView
			        android:id="@+id/view_route_tv_mountain_icon"
			        android:layout_width="35dp"
			        android:layout_height="wrap_content"
			        android:textSize="30sp"
			        android:text="@string/icon_mountain" />
				    		    
			    <TextView
			        android:id="@+id/view_route_tv_send_type"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="-5dp"
			        android:textSize="20sp" />
		    
		    </LinearLayout>
		    
		    <LinearLayout 
			   	android:id="@+id/view_route_ll_notes"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
				    
			    <TextView
			        android:id="@+id/view_route_tv_notes_icon"
			        android:layout_width="35dp"
			        android:layout_height="wrap_content"
			        android:textSize="30sp"
			        android:text="@string/icon_pencil_square_o" />
			   
			    <TextView
		        	android:id="@+id/view_route_tv_notes"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="-5dp"
			        android:textSize="20sp"
			    	android:layout_marginBottom="20dp" />
			
			</LinearLayout>
			
	</LinearLayout>
	
</ScrollView>